Fixed links and made changes for discovery page

--- a/src/components/Header/DropDown/LoginDropDown.css
+++ b/src/components/Header/DropDown/LoginDropDown.css
@@ -16,3 +16,10 @@
     margin: 10px;
     color: #3C286D;
 }
+
+@media all and (max-width: 769px) {
+    .account-dropdown {
+        top: 50px;
+        right: 10px;
+    }
+  }
