--- a/src/components/Discovery/DiscoverPageCard/DiscoverPageCard/DiscoverPageCard.css
+++ b/src/components/Discovery/DiscoverPageCard/DiscoverPageCard/DiscoverPageCard.css
@@ -6,6 +6,13 @@
     font-family: patuaOne;
 }
 
+.discovery-card {
+    background: #F7FAFC;
+    box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.35);
+    border-radius: 8px;
+    cursor: pointer;
+}
+
 @media screen and (max-width: 526px) {
     .landing-card {
         min-width: 220px;
