--- a/src/components/ProdDet/ProdDet.css
+++ b/src/components/ProdDet/ProdDet.css
@@ -1,13 +1,14 @@
 .main1 {
-    
+
     display: flex;
     justify-content: center;
     left: 0;
     top: 20%;
     width: 100%;
-   
+
     background-color: rgb(254, 254, 254);
-  }
+}
+
 .coupon {
     position: relative;
     display: flex;
@@ -15,41 +16,43 @@
     justify-content: center;
     border-radius: 25px;
     left: 0;
-    top:7%;
+    top: 7%;
     width: 40%;
-   
+
     padding: 1%;
     margin: 1%;
     background-color: rgb(238, 240, 245);
 }
 
-.couponitem{
+.couponitem {
     position: relative;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     padding: 1%;
     margin: 1%;
-    background-color:rgb(211, 218, 238);
+    background-color: rgb(211, 218, 238);
     border-radius: 25px;
 }
-.label{
+
+.label {
     position: relative;
-    color:rgb(12, 21, 116); 
+    color: rgb(12, 21, 116);
     font-weight: bold;
-    width:20% ;
+    width: 36%;
     padding: 1%;
     margin: 1%;
     background-color: whitesmoke;
     text-align: center;
     border-radius: 25px;
-    
-   
+
+
 }
 
-.input{
-    color:rgb(35, 11, 90); 
-    width: max-content;
+.input {
+    color: rgb(35, 11, 90);
+    width: 36%;
+    /* width: max-content; */
     padding: 1%;
     margin: 1%;
     background-color: whitesmoke;
@@ -61,7 +64,7 @@
 .b2 {
     position: relative;
     border: none;
-    left:40%;
+    left: 40%;
     font-weight: bold;
     font-size: large;
     width: 20%;
@@ -72,15 +75,15 @@
     color: rgb(202, 202, 213);
     background-color: rgb(20, 8, 81);
     border-radius: 25px;
-  }
+}
 
-  .coupondesc1 {
+.coupondesc1 {
     position: relative;
     align-content: center;
     border-radius: 25px;
-    left: 10%;
-    height: 50%;
-    width:70%;
+    left: 20%;
+    height: 40%;
+    width: 50%;
     padding: 1%;
     margin: 1%;
     background-color: rgb(193, 197, 208);
@@ -90,14 +93,131 @@
     position: relative;
     border-radius: 25px;
     left: 0;
-   
+
     padding: 1%;
     margin: 1%;
     background-color: rgb(26, 179, 39);
     overflow: auto;
 }
 
-.desc_box{
-   text-align: left;
-   
+.desc_box {
+    text-align: left;
+
+}
+
+@media screen and (max-width: 841px) {
+    .label {
+        position: relative;
+        color: rgb(12, 21, 116);
+        /* font-weight: bold; */
+        font-size: small;
+        width: 36%;
+        padding: 1%;
+        margin: 1%;
+        background-color: whitesmoke;
+        text-align: center;
+        border-radius: 25px;
+
+
+    }
+
+    .input {
+        color: rgb(35, 11, 90);
+        width: 36%;
+
+        font-size: small;
+        padding: 1%;
+        margin: 1%;
+        background-color: whitesmoke;
+        text-align: center;
+        border-radius: 25px;
+    }
+
+
+
+}
+
+@media screen and (max-width: 650px) {
+    .main1 {
+
+        display: flex;
+        flex-direction: column;
+    }
+
+    .coupon {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        border-radius: 25px;
+        top: 7%;
+        width: 90%;
+        left:5%;
+        padding: 1%;
+        margin: 1%;
+        background-color: rgb(238, 240, 245);
+    }
+
+}
+
+@media screen and (max-width: 690px) {
+
+    .couponitem {
+        position: relative;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        padding: 1%;
+        margin: 1%;
+        height: 10%;
+        background-color: rgb(211, 218, 238);
+        border-radius: 25px;
+    }
+
+    .label {
+        position: relative;
+        color: rgb(12, 21, 116);
+        /* font-weight: bold; */
+        font-size: small;
+        width: 36%;
+        padding: 1%;
+        margin: 1%;
+        height: 70%;
+        background-color: whitesmoke;
+        text-align: center;
+
+        border-radius: 25px;
+
+
+    }
+
+    .input {
+        color: rgb(35, 11, 90);
+        width: 36%;
+
+        font-size: x-small;
+        padding: 1%;
+        margin: 1%;
+        background-color: whitesmoke;
+        text-align: center;
+
+        border-radius: 25px;
+    }
+
+    .b2 {
+        position: relative;
+        border: none;
+        left: 40%;
+        font-weight: bold;
+        font-size: medium;
+        width: 20%;
+        height: 10%;
+        padding: 1%;
+        margin: 1%;
+        text-align: center;
+        color: rgb(202, 202, 213);
+        background-color: rgb(20, 8, 81);
+        border-radius: 20px;
+    }
+
 }
