--- a/src/components/Header/DropDown/LoginDropDown.css
+++ b/src/components/Header/DropDown/LoginDropDown.css
@@ -1,6 +1,6 @@
 .account-dropdown {
-    height: 80px;
-    width: 200px;
+    height: 90px;
+    width: 250px;
     background-color: white;
     position: absolute;
     top: 90px;
@@ -10,11 +10,13 @@
     flex-direction: column;
     font-family: patuaOne;
     box-shadow: 0px 19px 32px 7px rgba(0,0,0,0.1);
+    padding: 10px 0px;
 }
 
-.account-dropdown * {
+.account-dropdown a {
     margin: 10px;
     color: #3C286D;
+    text-decoration: underline;
 }
 
 @media all and (max-width: 769px) {
