--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -11,11 +11,12 @@
 .main2{
       
          display: flex;
-         
+         flex-direction: row;
          justify-content: center;
          left: 0;
          top: 25%;
          width: 100%;
+      
          
          
 }
@@ -25,17 +26,66 @@
     display: flex;
     flex-direction: column;
     width: 30%;
-    /* height: 100%;  */
+    /* background-color: brown; */
+  
+}
+
+.photo{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center; */
    
+    width: 50%;
+    top:5%;
+    left:25%;
+    /* background-color: blue; */
    
 }
+.avatar{
+    position: relative;
+    width: 100%;
+    /* background-color: rgb(111, 255, 0); */
+}
+.upload{
+    position: relative;
+    display:flex;
+    justify-content: center;
+    width: 100%;
+    height: 10%;
+    padding-top:15%;
+    
+}
+.history{
+    position: relative;
+    display:flex;
+    justify-content: center;
+    width: 100%;
+    height:13%;
+    padding-top:5%;
+    /* background-color: rgb(111, 255, 0); */
+}
+
+.button1{
+    position: relative;
+    width:90px; 
+    font-size: medium;
+    background-color:  #3C286D;
+    color: white;
+    text-align: center;
+    top:0%; 
+    border-radius: 25px;
+   
+}
+
+
+
 
 .profile2 {
     position: relative;
     display:flex;
     flex-direction: column;
     width: 70%;
-
     border-radius: 25px;
 }
 
@@ -82,7 +132,7 @@
     color: white;
     border-radius: 25px;
     padding: 1%;
-   
+    margin: 5%;
    
     
 }
@@ -102,8 +152,6 @@
 }
 .perinfo1{
     position: relative;
-  
-   
     width:100%;
     text-align: left;
     font-size:large;
@@ -132,40 +180,6 @@
    
 }
 
-.photo{
-    position: relative;
-    /* height:45%; */
-    display: flex;
-    flex-direction: column;
-    width: 50%;
-    top:5%;
-    left:25%;
-   
-}
-.button1{
-    position: relative;
-    width:50%;
-    top:5%;
-    left :13%;
-    align-self: center;
-   
-    font-size: medium;
-    background-color:  #3C286D;
-    color: white;
-    height:20%;
-    border-radius: 25px;
-}
-.button2{
-    position: relative;
-    left :13%;
-    align-self: center;
-    /* font-weight: bolder;
-    font-size: larger; */
-    background-color: rgb(6, 6, 76);
-    color: white;
-    /* height:10%; */
-    border-radius: 25px;
-}
 
 button:hover{
     background: rgb(78, 78, 186);
@@ -173,7 +187,16 @@ button:hover{
 
 
 @media screen and (max-width: 1000px) {
-
+    .mainbox{
+  
+        margin: 50px auto;
+        box-shadow: 0px 0px 7px 2px rgba(0, 0, 0, 0.10);
+        border-radius: 5px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    
     .main2 {
 
         display: flex;
@@ -212,11 +235,11 @@ button:hover{
     }
     .button1 {
         position: relative;
-        width: 50%;
+        width:90px; 
         font-size: medium;
         background-color: #3C286D;
         color: white;
-        height: 20%;
+        height: 35px;
         margin :3%;
         border-radius: 25px;
     }
