--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -107,8 +107,13 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    width:50%;
+    /* width:50%; */
+    width: 'inherit';
     /* height:20%; */
+    /* background-color: chartreuse; */
+   
+    
+    
     
 }
 
@@ -116,7 +121,7 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    width:50%;
+    width: inherit;
     margin: auto;
    
 }
@@ -143,7 +148,8 @@
     position: relative;
     top: 0%;
    
-    width:100%;
+    /* width:100%; */
+    width:inherit;
     text-align: left;
     font-size:large;
     color: rgb(7, 7, 77);
@@ -185,7 +191,7 @@ button:hover{
     background: rgb(78, 78, 186);
 }
 
-
+/* 
 @media screen and (max-width: 1000px) {
     .mainbox{
   
@@ -279,7 +285,7 @@ button:hover{
         display: flex;
         flex-direction: column;
         width: 100%;
-        /* height:20%; */
+         height:20%; 
 
     }
 
@@ -324,3 +330,4 @@ button:hover{
     }
 
 }
+ */
