--- a/src/components/Header/DropDown/LoginDropDown.css
+++ b/src/components/Header/DropDown/LoginDropDown.css
@@ -1,27 +1,27 @@
 .account-dropdown {
-    height: 90px;
-    width: 250px;
-    background-color: white;
-    position: absolute;
-    top: 90px;
-    right: 19%;
-    flex: 0;
-    display: flex;
-    flex-direction: column;
-    font-family: patuaOne;
-    box-shadow: 0px 19px 32px 7px rgba(0,0,0,0.1);
-    padding: 10px 0px;
+  height: 90px;
+  width: 250px;
+  background-color: white;
+  position: absolute;
+  top: 90px;
+  right: 19%;
+  flex: 0;
+  display: flex;
+  flex-direction: column;
+  font-family: patuaOne;
+  box-shadow: 0px 19px 32px 7px rgba(0, 0, 0, 0.1);
+  padding: 10px 0px;
 }
 
 .account-dropdown a {
-    margin: 10px;
-    color: #3C286D;
-    text-decoration: underline;
+  margin: 10px;
+  color: #3c286d;
+  text-decoration: underline;
 }
 
 @media all and (max-width: 769px) {
-    .account-dropdown {
-        top: 50px;
-        right: 10px;
-    }
+  .account-dropdown {
+    top: 50px;
+    right: 10px;
   }
+}
