--- a/src/components/ProdDet/ProdDet.css
+++ b/src/components/ProdDet/ProdDet.css
@@ -4,7 +4,6 @@
   left: 0;
   top: 20%;
   width: 100%;
-
   background-color: rgb(254, 254, 254);
 }
 
@@ -20,7 +19,7 @@
 
   padding: 1%;
   margin: 1%;
-  background-color: rgb(238, 240, 245);
+  box-shadow: 0px 0px 7px 2px rgba(0, 0, 0, 0.1);
 }
 
 .couponitem {
@@ -30,7 +29,7 @@
   justify-content: space-around;
   padding: 1%;
   margin: 1%;
-  background-color: rgb(211, 218, 238);
+  box-shadow: 0px 0px 7px 2px rgba(0, 0, 0, 0.1);
   border-radius: 25px;
 }
 
@@ -41,7 +40,6 @@
   width: 36%;
   padding: 1%;
   margin: 1%;
-  background-color: whitesmoke;
   text-align: center;
   border-radius: 25px;
 }
@@ -76,13 +74,14 @@
 .coupondesc1 {
   position: relative;
   align-content: center;
-  border-radius: 25px;
   left: 20%;
   height: 40%;
   width: 50%;
   padding: 1%;
   margin: 1%;
-  background-color: rgb(193, 197, 208);
+  /* background-color: rgb(193, 197, 208); */
+  box-shadow: 0px 0px 7px 2px rgba(0, 0, 0, 0.1);
+  /* background-color: cornflowerblue; */
 }
 
 .coupondesc2 {
