--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -2,6 +2,7 @@
   margin: 50px auto;
   box-shadow: 0px 0px 7px 2px rgba(0, 0, 0, 0.1);
   border-radius: 5px;
+  width: 90%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -180,4 +181,10 @@ button:hover {
     left: 25%;
     border-radius: 25px;
   }
+}
+
+@media screen and (max-width: 850px) {
+
+  
+
 }
