--- a/src/components/couponHistory/couponHistory.css
+++ b/src/components/couponHistory/couponHistory.css
@@ -18,7 +18,7 @@
   height: 115px;
   margin: 0 auto;
   top: 40px;
-  background-color: rgb(224, 225, 235);
+  box-shadow: 0px 0px 7px 2px rgba(0, 0, 0, 0.1);
   border-radius: 35px;
   font-family: patuaOne;
   display: flex;
