Prodet and Profile CSS changes

--- a/src/components/ProdDet/ProdDet.css
+++ b/src/components/ProdDet/ProdDet.css
@@ -4,7 +4,8 @@
   left: 0;
   top: 20%;
   width: 100%;
-  background-color: rgb(254, 254, 254);
+
+  /* background-color: rgb(212, 230, 240); */
 }
 
 .coupon {
