--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -183,8 +183,62 @@ button:hover {
   }
 }
 
-@media screen and (max-width: 850px) {
+@media screen and (max-width: 550px) {
 
-  
+  .mainbox {
+    margin: 50px auto;
+    box-shadow: 0px 0px 7px 2px rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .profile2 {
+    position: relative;
+    width: 80%;
+    left: 20%;;
+    border-radius: 25px;
+    /* background-color: #3c286d; */
+  }
+
+}
+
+@media screen and (max-width: 450px) {
+  .mainbox {
+    margin: 50px auto;
+    box-shadow: 0px 0px 7px 2px rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .profile2 {
+    position: relative;
+    width: 80%;
+    left: 10%;;
+    border-radius: 25px;
+    /* background-color: #3c286d; */
+  }
+
+}
+
+@media screen and (max-width: 400px) {
+  .mainbox {
+    margin: 50px auto;
+    box-shadow: 0px 0px 7px 2px rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .profile2 {
+    position: relative;
+    width: 80%;
+    left: 5%;
+    border-radius: 25px;
+  }
 
 }
