--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -1,11 +1,12 @@
 .mainbox {
-  margin: 50px auto;
+  margin: 35px auto;
   box-shadow: 0px 0px 7px 2px rgba(0, 0, 0, 0.1);
   border-radius: 5px;
   width: 90%;
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 40px 0px;
 }
 
 .main2 {
