--- a/src/components/ProdDet/ProdDet.css
+++ b/src/components/ProdDet/ProdDet.css
@@ -144,7 +144,7 @@
     left: 5%;
     padding: 1%;
     margin: 1%;
-    background-color: rgb(238, 240, 245);
+    
   }
 }
 
@@ -157,7 +157,7 @@
     padding: 1%;
     margin: 1%;
     height: 10%;
-    background-color: rgb(211, 218, 238);
+    
     border-radius: 25px;
   }
 
@@ -170,7 +170,7 @@
     padding: 1%;
     margin: 1%;
     height: 70%;
-    background-color: whitesmoke;
+    /* background-color: whitesmoke; */
     text-align: center;
 
     border-radius: 25px;
