--- a/src/components/ProdDet/ProdDet.css
+++ b/src/components/ProdDet/ProdDet.css
@@ -76,13 +76,13 @@
   position: relative;
   align-content: center;
   left: 25%;
-  height: 40%;
+  height: 50%;
   width: 40%;
   padding: 1%;
   margin: 1%;
   /* background-color: rgb(193, 197, 208); */
   box-shadow: 0px 0px 7px 2px rgba(0, 0, 0, 0.1);
-  /* background-color: cornflowerblue; */
+  /* background-color: rgb(9, 48, 120); */
 }
 
 .coupondesc2 {
