--- a/src/components/ProdDet/ProdDet.css
+++ b/src/components/ProdDet/ProdDet.css
@@ -12,12 +12,12 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-around;
   border-radius: 25px;
   left: 0;
   top: 7%;
   width: 40%;
-
+  height: 345px;
   padding: 1%;
   margin: 1%;
   box-shadow: 0px 0px 7px 2px rgba(0, 0, 0, 0.1);
@@ -75,9 +75,8 @@
 .coupondesc1 {
   position: relative;
   align-content: center;
-  left: 20%;
-  height: 40%;
-  width: 50%;
+  left: 28%;
+  width: 35%;
   padding: 1%;
   margin: 1%;
   /* background-color: rgb(193, 197, 208); */
@@ -137,7 +136,8 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
+    height: 290px;
     border-radius: 25px;
     top: 7%;
     width: 90%;
