--- a/src/components/pay_success/pay_succ.css
+++ b/src/components/pay_success/pay_succ.css
@@ -4,15 +4,15 @@
   justify-content: center;
   width: 100%;
   left: 50%;
+  margin: 78px 0px;
 }
 
 .success11 {
   position: relative;
   color: rgb(10, 10, 83);
   font-weight: bolder;
-  font-size: xx-large;
+  font-size: 28px;
   align-self: center;
-  width: 25%;
   word-wrap: break-word;
 }
 
